--- a/index.html
+++ b/index.html
@@ -378,13 +378,19 @@
 		</section>
 		<section class="section card z1">
 			<h1>Circular progress indicators</h1>
-			<p>A progress (or <code>role="progress"</code>) element with the <code>circular</code> class will be styled as a circular progress indicator. Change the <code>border-top-color</code> to change the color of the spinner.</p>
+			<p>A progress (or <code>role="progress"</code>) element with the <code>circular</code> class will be styled as a circular progress indicator. Change the <code>color</code> (or <code>border-top-color</code>) to change the color of the spinner.</p>
 			<div class="col">
 				<progress class="circular"></progress>
+				<progress class="circular" style="width: 32px; height: 32px;"></progress>
+				<progress class="circular" style="color: #2196f3;"></progress>
 				<progress class="circular" style="border-top-color: #2196f3;"></progress>
 			</div>
 			<code class="col">
 				&lt;progress class="circular"&gt;&lt;/progress&gt;
+				<br />
+				&lt;progress class="circular" style="width: 32px; height: 32px;"&gt;&lt;/progress&gt;
+				<br />
+				&lt;progress class="circular" style="color: #2196f3;"&gt;&lt;/progress&gt;
 				<br />
 				&lt;progress class="circular" style="border-top-color: #2196f3;"&gt;&lt;/progress&gt;
 			</code>
