Slightly improve in IE8
This does break instances of <select size="1">, but you can just remove the size attribute and it will work.

--- a/index.html
+++ b/index.html
@@ -84,6 +84,20 @@
 			}
 		</style>
 		
+		<!--[if lt IE 9]>
+			<script type="text/javascript">
+				document.createElement('header');
+				document.createElement('section');
+				document.write('It worked!');
+			</script>
+			<style type="text/css">
+				header,
+				section {
+					display: block;
+				}
+			</style>
+		<![endif]--> 
+		
 		<script type="text/javascript" src="material-touch.js"></script>
 		
 		
