Add meta description and update introductory paragraph

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html manifest="cache.manifest">
 	<head>
 		<title>MaterialZ</title>
+		<meta name="description" content="MaterialZ is a CSS library created by Zachary Yaro that offers a lightweight implementation of the Material Design spec." />
 		
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -127,7 +128,7 @@
 			MaterialZ
 		</header>
 		<p>
-			<a href="https://github.com/zmyaro/materialz" target="_blank">MaterialZ</a> is a CSS library created by <a href="http://zmyaro.com" target="_blank">Zachary Yaro</a> that implements the <a href="http://www.google.com/design/spec/material-design/introduction.html" target="_blank">Material Design spec</a>.  Simply adding the stylesheets will instantly Material-theme any site.  With a few tweaks, other widgets, such as app bars, lists, and cards, can be added.
+			<a href="https://github.com/zmyaro/materialz" target="_blank">MaterialZ</a> is a CSS library created by <a href="https://zmyaro.com" target="_blank">Zachary Yaro</a> that implements the <a href="https://material.io/design/introduction/" target="_blank">Material Design spec</a>.  Simply adding the stylesheets introduces a base coat of Material theming to any site.  With a few tweaks, other widgets, such as app bars, lists, and cards, can be added.
 		</p>
 		<br />
 		<header class="category-header">
