Add demo for <kbd> elements

--- a/index.html
+++ b/index.html
@@ -152,6 +152,16 @@
 			</code>
 		</section>
 		<section class="section card z1">
+			<h1>Keyboard shortcuts</h1>
+			<p>While there is no official design spec, the <code>&lt;kbd&gt;</code> element has formatting similar to keyboard hints in some of Google's Material Design apps.</p>
+			<div class="col">
+				Reload the page with <kbd>Ctrl</kbd>+<kbd>R</kbd>.
+			</div>
+			<code class="col">
+				Reload the page with &lt;kbd&gt;Ctrl&lt;/kbd&gt;+&lt;kbd&gt;R&lt;/kbd&gt;.
+			</code>
+		</section>
+		<section class="section card z1">
 			<h1>Buttons</h1>
 			<!--[if lt IE 9]>
 				<p>
