Rename app cache manifest to have .appcache extension

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="cache.manifest">
+<html manifest="manifest.appcache">
 	<head>
 		<title>MaterialZ</title>
 		<meta name="description" content="MaterialZ is a CSS library created by Zachary Yaro that offers a lightweight implementation of the Material Design spec." />
