Add footer links to demo page

--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@
 				list-style-type: '\2193';
 			}
 			
+			footer {
+				margin-top: 2rem;
+				font-size: 80%;
+				text-align: center;
+			}
+				footer span {
+					display: inline-block;
+				}
+			
 			.category-header,
 			.section {
 				margin: 0 auto;
@@ -583,6 +592,18 @@
 				&lt;/div&gt;
 			</code>
 		</section>
+		<footer>
+			<p>
+				<span>Created by</span>
+				<span><a href="https://zmyaro.com" target="_blank">Zachary Yaro</a></span>
+				&middot;
+				<span><a href="https://github.com/ZMYaro/materialz" target="_blank">Source code</a></span>
+				&middot;
+				<span><a href="https://patreon.com/ZMYaro">Support my work</a></span>
+				&middot;
+				<span><a href="https://material.io/design/introduction" target="_blank">Google's Material Design spec</a></span>
+			</p>
+		</footer>
 	</body>
 </html>
 
