--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
 					margin-top: 8px;
 					margin-bottom: 8px;
 				}
+					.section h2 {
+						margin-top: 0;
+					}
 			
 			.col {
 				-webkit-box-sizing: border-box;
@@ -192,7 +195,7 @@
 		</header>
 		<a name="headings"></a>
 		<section class="section card z1">
-			<h1>Headings</h1>
+			<h2>Headings</h2>
 			<p>The top three levels of headings have been styled according to the heading, title, and subhead styles in the <a href="http://www.google.com/design/spec/style/typography.html#typography-styles" target="_blank">Material Design guidelines</a>.</p>
 			<div class="col">
 				<h1>Headline</h1>
@@ -209,7 +212,7 @@
 		</section>
 		<a name="kbd"></a>
 		<section class="section card z1">
-			<h1>Keyboard shortcuts</h1>
+			<h2>Keyboard shortcuts</h2>
 			<p>While there is no official design spec, the <code>&lt;kbd&gt;</code> element has formatting similar to keyboard hints in some of Google's Material Design apps.</p>
 			<div class="col">
 				Reload the page with <kbd>Ctrl</kbd>+<kbd>R</kbd>.
@@ -220,7 +223,7 @@
 		</section>
 		<a name="buttons"></a>
 		<section class="section card z1">
-			<h1>Buttons</h1>
+			<h2>Buttons</h2>
 			<!--[if lt IE 9]>
 				<p>
 					(Older IE has a bug with raised element inside of raised elements, so you need to toggle the elevation of this section to see the raised buttons.
@@ -266,7 +269,7 @@
 		</section>
 		<a name="radios"></a>
 		<section class="section card z1">
-			<h1>Radio buttons</h1>
+			<h2>Radio buttons</h2>
 			<p>An <code>&lt;input type="radio" /&gt;</code> will be styled and animated as a paper radio button.  (Note this is only fully supported in WebKit- and Blink-based browsers, such as Chrome and Safari.)</p>
 			<div class="col">
 				<input type="radio" name="radioset1" />
@@ -286,7 +289,7 @@
 		</section>
 		<a name="checkboxes"></a>
 		<section class="section card z1">
-			<h1>Checkboxes</h1>
+			<h2>Checkboxes</h2>
 			<p>An <code>&lt;input type="checkbox" /&gt;</code> will be styled and animated as a paper checkbox.  (Note this is only fully supported in WebKit- and Blink-based browsers, such as Chrome and Safari.)</p>
 			<div class="col">
 				<input type="checkbox" />
@@ -306,7 +309,7 @@
 		</section>
 		<a name="selects"></a>
 		<section class="section card z1">
-			<h1>Drop-down menus</h1>
+			<h2>Drop-down menus</h2>
 			<p>A simple <code>&lt;select&gt;</code> element will be styled as a paper drop-down menu.</p>
 			<div class="col">
 				<select>
@@ -335,7 +338,7 @@
 		</section>
 		<a name="textfields"></a>
 		<section class="section card z1">
-			<h1>Text fields</h1>
+			<h2>Text fields</h2>
 			<p>Any <code>&lt;input /&gt;</code> with <code>type</code> set to <code>search</code>, <code>password</code>, <code>email</code>, <code>url</code>, or <code>number</code> will be styled as a paper text field.</p>
 			<div class="col">
 				<input type="text" placeholder="Text field" />
@@ -346,7 +349,7 @@
 		</section>
 		<a name="sliders"></a>
 		<section class="section card z1">
-			<h1>Sliders</h1>
+			<h2>Sliders</h2>
 			<p>Any <code>&lt;input type="range" /&gt;</code> will be styled as a paper slider.</p>
 			<div class="col">
 				<input type="range" />
@@ -360,7 +363,7 @@
 		</section>
 		<a name="progress"></a>
 		<section class="section card z1">
-			<h1>Progress bars</h1>
+			<h2>Progress bars</h2>
 			<p>Any <code>&lt;progress&gt;</code> element will be styled as a paper progress bar.</p>
 			<div class="col">
 				<progress value="0.5"></progress>
@@ -377,7 +380,7 @@
 		</header>
 		<a name="lists"></a>
 		<section class="section card z1">
-			<h1>Lists</h1>
+			<h2>Lists</h2>
 			<p>An <code>&lt;ol&gt;</code> or <code>&lt;ul&gt;</code> with the <code>list</code> class will have its list items and buttons styled.</p>
 			<div class="col">
 				<ul class="list">
@@ -403,7 +406,7 @@
 		</section>
 		<a name="toolbars"></a>
 		<section class="section card z1">
-			<h1>Toolbars</h1>
+			<h2>Toolbars</h2>
 			<p>An element with <code>role="toolbar"</code> will have its buttons styled as paper toolbar buttons.  Icons will be resized to 24px, so SVGs and 2x PNGs may be used.</p>
 			<div class="col">
 				<div role="toolbar">
@@ -453,7 +456,7 @@
 		</section>
 		<a name="appbars"></a>
 		<section class="section card z1">
-			<h1>App bars</h1>
+			<h2>App bars</h2>
 			<p>An element (usually a <code>&lt;header&gt;</code>) with the <code>appBar</code> class will be styled as an app bar&mdash;fixed to the top of the page, and set to be 64px tall on larger screens and 56px tall on smaller screens.  An app bar can be a toolbar as well by adding <code>role="toolbar"</code>.  A depth class can be added to visually raise button the app bar above other content (see <a href="#depth">Depth</a> below).</p>
 			<div class="col">
 				[See the app bar at the top of the screen for an example.]
@@ -497,7 +500,7 @@
 		</section>
 		<a name="cards"></a>
 		<section class="section card z1">
-			<h1>Cards</h1>
+			<h2>Cards</h2>
 			<p>An element with the <code>card</code> class will be styled as a paper card.  Add a depth class to determine how high to visually raise the card (see <a href="#depth">Depth</a> below).</p>
 			<div class="col">
 				<div class="card z1" style="width: 192px; height: 192px;"></div>
@@ -508,7 +511,7 @@
 		</section>
 		<a name="circularprogress"></a>
 		<section class="section card z1">
-			<h1>Circular progress indicators</h1>
+			<h2>Circular progress indicators</h2>
 			<p>A progress (or <code>role="progress"</code>) element with the <code>circular</code> class will be styled as a circular progress indicator. Change the <code>color</code> (or <code>border-top-color</code>) to change the color of the spinner.</p>
 			<div class="col">
 				<progress class="circular"></progress>
@@ -533,7 +536,7 @@
 			<p>Adding the <code>material-depth.css</code> style sheet enables depth classes <code>z1</code> through <code>z5</code>, which add shadows to elements.</p>
 		</header>
 		<section class="section card z1">
-			<h1>Depth classes</h1>
+			<h2>Depth classes</h2>
 			<p>An element with any of the five z-depth classes will have a shadow applied to it.  A button with a depth class applied will function as a raised button (see <a href="#elements">Elements</a> above).</p>
 			<div class="col">
 				<div class="card z1" style="width: 256px;">
