Tweak demo page introduction

--- a/index.html
+++ b/index.html
@@ -156,7 +156,10 @@
 			MaterialZ
 		</header>
 		<p>
-			<a href="https://github.com/zmyaro/materialz" target="_blank">MaterialZ</a> is a CSS library created by <a href="https://zmyaro.com" target="_blank">Zachary Yaro</a> that implements the <a href="https://material.io/design/introduction/" target="_blank">Material Design spec</a>.  Simply adding the stylesheets introduces a base coat of Material theming to any site.  With a few tweaks, other widgets, such as app bars, lists, and cards, can be added.
+			MaterialZ is a CSS library that implements the <a href="https://material.io/design/introduction/" target="_blank">Material Design spec</a>.  Simply adding the stylesheets introduces a base coat of Material theming.  With a few tweaks, other widgets, such as app bars, lists, and cards, can be added.  MaterialZ is designed to be a low-effort &ldquo;it just works&rdquo; alternative to other Material Design libraries, trading advanced customization options for minimizing complexity.
+			<br />
+			<br />
+			<a href="https://github.com/zmyaro/materialz" target="_blank">Get it on GitHub &#x2b77;</a>
 		</p>
 		<nav>
 			<ul>
