Add toggle switches

--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
 						<li><a href="#appbars">App bars</a></li>
 						<li><a href="#cards">Cards</a></li>
 						<li><a href="#circularprogress">Circular progress indicators</a></li>
+						<li><a href="#switches">Toggle switches</a></li>
 					</ul>
 				</li>
 				<li><a href="#depth">Depth</a></li>
@@ -530,6 +531,38 @@
 				&lt;progress class="circular" style="color: #2196f3;"&gt;&lt;/progress&gt;
 				<br />
 				&lt;progress class="circular" style="border-top-color: #2196f3;"&gt;&lt;/progress&gt;
+			</code>
+		</section>
+		<a name="switches"></a>
+		<section class="section card z1">
+			<h2>Toggle switches</h2>
+			<p>A checkbox with the <code>switch</code> class will be styled as a toggle switch.  When toggled on, the switch will be the current <code>color</code>.</p>
+			<div class="col">
+				<input type="checkbox" class="switch" />
+				<input type="checkbox" class="switch" checked="checked" />
+				<br />
+				<br />
+				<input type="checkbox" class="switch" disabled="disabled" />
+				<input type="checkbox" class="switch" checked="checked" disabled="disabled" />
+				<br />
+				<br />
+				<input type="checkbox" class="switch" checked="checked" style="color: #f44336;" />
+				<input type="checkbox" class="switch" checked="checked" disabled="disabled" style="color: #f44336;" />
+			</div>
+			<code class="col">
+				&lt;input type="checkbox" class="switch" /&gt;
+				<br />
+				&lt;input type="checkbox" class="switch" checked="checked" /&gt;
+				<br />
+				<br />
+				&lt;input type="checkbox" class="switch" disabled="disabled" /&gt;
+				<br />
+				&lt;input type="checkbox" class="switch" checked="checked" disabled="disabled" /&gt;
+				<br />
+				<br />
+				&lt;input type="checkbox" class="switch" checked="checked" style="color: #f44336;" /&gt;
+				<br />
+				&lt;input type="checkbox" class="switch" checked="checked" disabled="disabled" style="color: #f44336;" /&gt;
 			</code>
 		</section>
 		<a name="depth"></a>
