Update copyright year to 2021

--- a/index.html
+++ b/index.html
@@ -633,8 +633,9 @@
 		</section>
 		<footer>
 			<p>
-				<span>Created by</span>
-				<span><a href="https://zmyaro.com" target="_blank">Zachary Yaro</a></span>
+				<span>&copy;2015-2021</span>
+				&middot;
+				<span>Created by <a href="https://zmyaro.com" target="_blank">Zachary Yaro</a></span>
 				&middot;
 				<span><a href="https://github.com/ZMYaro/materialz" target="_blank">Source code</a></span>
 				&middot;
